--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,6 +388,7 @@
   margin: 0 auto;
   cursor: pointer;
   transition: .3s;
+  pointer-events: none;
 }
 .contact button:hover {
   background: #000;
@@ -401,4 +402,45 @@
   .contact button {
     font-size: 18px;
   }
+}
+
+.blog-single .page-size {
+  padding: 40px 20px;
+  background: #fff;
+}
+.blog-single .ttl-wrap {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+.blog-single .ttl-wrap .eyecatch {
+  width: 100px;
+}
+.blog-single .ttl-wrap .eyecatch img {
+  aspect-ratio: 1/1;
+  object-fit: cover;
+}
+.blog-single .ttl-wrap .txt-area {
+  width: calc(100% - 100px);
+}
+.blog-single p {
+  margin: 20px 0;
+}
+.blog-single .back-link {
+  display: block;
+  width: 200px;
+  text-align: center;
+  font-size: 16px;
+  background: #fff;
+  border: 1px solid #000;
+  border-radius: 5px;
+  padding: 5px 15px;
+  margin: 40px auto;
+  cursor: pointer;
+  transition: .3s;
+}
+.blog-single .back-link:hover {
+  background: #000;
+  color: #fff;
 }
