--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,8 +292,12 @@
   flex-wrap: wrap;
 }
 .blog-list li {
-  width: 48%;
-  margin-bottom: 40px;
+  width: 49%;
+  margin-bottom: 24px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  padding: 16px;
+  border-radius: 8px;
+  background: #fff;
 }
 .blog-list li a {
   display: flex;
@@ -328,7 +332,7 @@
   -webkit-line-clamp: 2;
 }
 .blog-list .text-area .desc {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -336,6 +340,7 @@
 }
 .blog-list .text-area .date-area {
   font-size: 14px;
+  text-align: right;
 }
 @media screen and (max-width: 767px) {
   .blog-list li {
@@ -407,12 +412,16 @@
 .blog-single .page-size {
   padding: 40px 20px;
   background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 .blog-single .ttl-wrap {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 20px;
-  margin-bottom: 40px;
+  padding-bottom: 36px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #bbb;
 }
 .blog-single .ttl-wrap .eyecatch {
   width: 100px;
@@ -423,6 +432,14 @@
 }
 .blog-single .ttl-wrap .txt-area {
   width: calc(100% - 100px);
+}
+.blog-single .ttl-wrap .txt-area .article-ttl {
+  margin-bottom: 20px;
+}
+.blog-single .ttl-wrap .txt-area .meta {
+  font-size: 0.9rem;
+  color: #333;
+  margin: 0;
 }
 .blog-single p {
   margin: 20px 0;
